--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
     "background": {
         "service_worker": "./background.js"
     },
-    "permissions": [],
+    "permissions": ["storage"],
     "author": "Christian Sendler",
     "homepage_url": "https://github.com/casendler/",
     "short_name": "React Extension",
