--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,18 @@
 {
     "manifest_version": 3,
-    "name": "React Chrome Extension",
+    "name": "Auto history filter",
     "version": "0.1",
-    "description": "Boilerplate manifest for React based Chrome Extension using Google's Manifest v3",
+    "description": "A chrome extension which can filter history automatically",
     "background": {
         "service_worker": "./background.js"
     },
     "permissions": ["storage", "history", "contextMenus"],
-    "author": "Christian Sendler",
-    "homepage_url": "https://github.com/casendler/",
+    "author": "Wilson Lu",
+    "homepage_url": "https://github.com/93wilsonlu/auto-history-filter",
     "short_name": "React Extension",
     "action": {
         "default_popup": "popup.html",
-        "default_title": "React Chrome Extension",
+        "default_title": "Auto history filter",
         "default_icon": {
             "16": "/images/react-logo-16.png",
             "32": "/images/react-logo-32.png",
