--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
     "background": {
         "service_worker": "./background.js"
     },
-    "permissions": ["storage", "history", "contextMenus"],
+    "permissions": ["tabs", "storage", "history", "contextMenus"],
     "author": "Wilson Lu",
     "homepage_url": "https://github.com/93wilsonlu/auto-history-filter",
     "short_name": "React Extension",
